# astrbot_plugin_novelai

./: .gitignore  README.md  _conf_schema.json  image_tagger.py  main.py  metadata.yaml  requirements.txt  tag_cache.py
prompt-planner/: .gitignore  NAI-Prompt-Planner.spec  README.md  build-exe.ps1  gui_entry.py  pyproject.toml  requirements.txt
prompt-planner/src/nai_prompt_planner/: __init__.py  __main__.py  api.py  cli.py  gui.py  planner.py  tag_cache.py
prompt-planner/src/nai_prompt_planner/prompts/: runtime-semantic-expansion.txt  runtime-system-prompt.txt
prompt-planner/tests/: test_api.py  test_planner.py
scripts/: configure_pat.py
skills/novelai-prompt-planner/: SKILL.md
skills/novelai-prompt-planner/agents/: openai.yaml
skills/novelai-prompt-planner/references/: examples.md  prompt-grammar.md  runtime-contract.md  runtime-semantic-expansion.txt  runtime-system-prompt.txt  visual-planning.md
tests/: test_generation_routing.py  test_local_assets.py
