[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nai-prompt-planner"
version = "0.1.0"
description = "Standalone NovelAI V4.5 prompt planning service backed by DeepSeek"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.10,<7",
]
test = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<2",
]

[project.scripts]
nai-prompt-planner = "nai_prompt_planner.cli:main"
nai-prompt-planner-gui = "nai_prompt_planner.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nai_prompt_planner = ["prompts/*.txt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
